Add application section to index.html
Added a new section for squad applications with a form.

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
         <a href="#about">Unidad</a>
         <a href="#command">Mando</a>
         <a href="#operations">Albúm</a>
+        <a href="#apply">Postulación</a>
+
 
         <a href="https://discord.gg/KudyUPzaxH" target="_blank" class="discord-button">
             <i class="fab fa-discord"></i> Unirse
@@ -80,6 +82,18 @@
         <img src="img/three_photo.png" alt="">
     </div>
 </section>
+
+<section id="apply" class="reveal">
+    <h2 class="section-title">Postulación al Escuadrón</h2>
+
+    <form id="applyForm" class="apply-form">
+        <input type="text" id="username" placeholder="Usuario de Roblox / Discord" required>
+        <input type="text" id="callsign" placeholder="Escuadrón a aspirar" required>
+
+        <button type="submit">Enviar Postulación</button>
+    </form>
+</section>
+
 
 <footer>
     © 2026 75th Ranger Regiment | BRM5 Military Simulation Unit | RolePlay
